# mandelbrot

./: README.md  pyproject.toml
src/mandelbrot/: cli.py
tests/: test_mandelbrot.py
