[tool.poetry]
name = "mandelbrot"
version = "0.1.0"
description = ""
authors = ["Bartosz Zaczyński <bartosz.zaczynski@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"
Pillow = "^6.2"

[tool.poetry.dev-dependencies]
pytest = "^3.0"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"

[tool.poetry.scripts]
mandelbrot = 'mandelbrot.cli:run'
